--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div>
 		<button id="random" class="btn btn-dark">Random Colors!</button>
 	</div>
-	<h2>Current CSS Background</h2>
+	<h2>CThis is the background</h2>
 	<h3></h3>
 
 
